--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2020.12.5
 chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
+dnspython==2.0.0
 fake-useragent==0.1.11
 Flask==1.1.2
 gunicorn==20.0.4
@@ -17,6 +18,7 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 mysql-connector-python==8.0.22
 pylint==2.4.4
+pymongo==3.11.2
 requests==2.25.0
 schedule==0.6.0
 selenium==3.141.0
